follow ide advice clean up