@@ -1,4 +1,3 @@
-
 /*
  *  Copyright (c) 2007 by Florian Bomers
  *
@@ -19,12 +18,11 @@
 
 package org.tritonus.sampled.convert;
 
-import java.util.Arrays;
+import java.util.List;
 import javax.sound.sampled.AudioFormat;
 import javax.sound.sampled.AudioInputStream;
 
 import org.tritonus.share.sampled.AudioFormats;
-import org.tritonus.share.sampled.TConversionTool;
 import org.tritonus.share.sampled.convert.TEncodingFormatConversionProvider;
 import org.tritonus.share.sampled.convert.TSynchronousFilteredAudioInputStream;
 
@@ -41,6 +39,12 @@ import static org.tritonus.sampled.convert.LawEncoder.SIGNED8;
 import static org.tritonus.sampled.convert.LawEncoder.ULAW8;
 import static org.tritonus.sampled.convert.LawEncoder.UNSIGNED8;
 import static org.tritonus.sampled.convert.LawEncoder.getConvertType;
+import static org.tritonus.share.sampled.TConversionTool.alaw2pcm16;
+import static org.tritonus.share.sampled.TConversionTool.alaw2pcm8;
+import static org.tritonus.share.sampled.TConversionTool.alaw2ulaw;
+import static org.tritonus.share.sampled.TConversionTool.ulaw2alaw;
+import static org.tritonus.share.sampled.TConversionTool.ulaw2pcm16;
+import static org.tritonus.share.sampled.TConversionTool.ulaw2pcm8;
 
 
 /**
@@ -75,12 +79,11 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
      * Constructor.
      */
     public LawDecoder() {
-        super(Arrays.asList(INPUT_FORMATS), Arrays.asList(OUTPUT_FORMATS));
+        super(List.of(INPUT_FORMATS), List.of(OUTPUT_FORMATS));
     }
 
     @Override
-    public AudioInputStream getAudioInputStream(AudioFormat targetFormat,
-                                                AudioInputStream sourceStream) {
+    public AudioInputStream getAudioInputStream(AudioFormat targetFormat, AudioInputStream sourceStream) {
         AudioFormat sourceFormat = sourceStream.getFormat();
         // the non-conversion case
         // TODO does this work OK when some fields are
@@ -104,9 +107,9 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
         throw new IllegalArgumentException("format conversion not supported");
     }
 
-    // protected boolean isSupportedFormat(AudioFormat format) {
-    // return getConvertType(format)!=0;
-    // }
+//    protected boolean isSupportedFormat(AudioFormat format) {
+//        return getConvertType(format) != 0;
+//    }
 
     private static AudioFormat createTargetFormat(AudioFormat src, AudioFormat dst) {
         return new AudioFormat(dst.getEncoding(),
@@ -120,10 +123,9 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
 
     static class FromUlawStream extends TSynchronousFilteredAudioInputStream {
 
-        private int convertType;
+        private final int convertType;
 
-        public FromUlawStream(AudioInputStream sourceStream,
-                              AudioFormat targetFormat) {
+        public FromUlawStream(AudioInputStream sourceStream, AudioFormat targetFormat) {
             // transform the targetFormat so that
             // FrameRate, SampleRate, and Channels match the sourceFormat
             // we only retain encoding, samplesize and endian of targetFormat.
@@ -138,70 +140,60 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
         }
 
         @Override
-        protected int convert(byte[] inBuffer, byte[] outBuffer,
-                              int outByteOffset, int inFrameCount) {
+        protected int convert(byte[] inBuffer, byte[] outBuffer, int outByteOffset, int inFrameCount) {
             int sampleCount = inFrameCount * getFormat().getChannels();
             switch (convertType) {
             case UNSIGNED8:
-                TConversionTool.ulaw2pcm8(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, false);
+                ulaw2pcm8(inBuffer, 0, outBuffer, outByteOffset, sampleCount, false);
                 break;
             case SIGNED8:
-                TConversionTool.ulaw2pcm8(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, true);
+                ulaw2pcm8(inBuffer, 0, outBuffer, outByteOffset, sampleCount, true);
                 break;
             case BIG_ENDIAN16:
-                TConversionTool.ulaw2pcm16(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, true);
+                ulaw2pcm16(inBuffer, 0, outBuffer, outByteOffset, sampleCount, true);
                 break;
             case LITTLE_ENDIAN16:
-                TConversionTool.ulaw2pcm16(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, false);
+                ulaw2pcm16(inBuffer, 0, outBuffer, outByteOffset, sampleCount, false);
                 break;
             case ALAW8:
-                TConversionTool.ulaw2alaw(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount);
+                ulaw2alaw(inBuffer, 0, outBuffer, outByteOffset, sampleCount);
                 break;
             }
             return inFrameCount;
         }
 
         @Override
-        protected void convertInPlace(byte[] buffer, int byteOffset,
-                                      int frameCount) {
+        protected void convertInPlace(byte[] buffer, int byteOffset, int frameCount) {
             int sampleCount = frameCount * format.getChannels();
             switch (convertType) {
             case UNSIGNED8:
-                TConversionTool.ulaw2pcm8(buffer, byteOffset, sampleCount,
-                        false);
+                ulaw2pcm8(buffer, byteOffset, sampleCount, false);
                 break;
             case SIGNED8:
-                TConversionTool.ulaw2pcm8(buffer, byteOffset, sampleCount, true);
+                ulaw2pcm8(buffer, byteOffset, sampleCount, true);
                 break;
             case ALAW8:
-                TConversionTool.ulaw2alaw(buffer, byteOffset, sampleCount);
+                ulaw2alaw(buffer, byteOffset, sampleCount);
                 break;
             default:
-                throw new RuntimeException("FromUlawStream: Call to convertInPlace, "
-                        + "but it cannot convert in place. (convertType=" + convertType + ")");
+                throw new RuntimeException(
+                        "Call to convertInPlace, but it cannot convert in place. (convertType=" + convertType + ")");
             }
         }
     }
 
     static class FromAlawStream extends TSynchronousFilteredAudioInputStream {
 
-        private int convertType;
+        private final int convertType;
 
-        public FromAlawStream(AudioInputStream sourceStream,
-                              AudioFormat targetFormat) {
+        public FromAlawStream(AudioInputStream sourceStream, AudioFormat targetFormat) {
             // transform the targetFormat so that
             // FrameRate, SampleRate, and Channels match the sourceFormat
-            // we only retain encoding, samplesize and endian of targetFormat.
+            // we only retain encoding, sample size and endian of targetFormat.
             super(sourceStream, createTargetFormat(sourceStream.getFormat(), targetFormat));
             convertType = getConvertType(getFormat(), ALAW8);
             if (convertType == 0) {
-                throw new IllegalArgumentException(
-                        "format conversion not supported");
+                throw new IllegalArgumentException("format conversion not supported");
             }
             if (targetFormat.getSampleSizeInBits() == 8) {
                 enableConvertInPlace();
@@ -209,48 +201,40 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
         }
 
         @Override
-        protected int convert(byte[] inBuffer, byte[] outBuffer,
-                              int outByteOffset, int inFrameCount) {
+        protected int convert(byte[] inBuffer, byte[] outBuffer, int outByteOffset, int inFrameCount) {
             int sampleCount = inFrameCount * getFormat().getChannels();
             switch (convertType) {
             case UNSIGNED8:
-                TConversionTool.alaw2pcm8(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, false);
+                alaw2pcm8(inBuffer, 0, outBuffer, outByteOffset, sampleCount, false);
                 break;
             case SIGNED8:
-                TConversionTool.alaw2pcm8(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, true);
+                alaw2pcm8(inBuffer, 0, outBuffer, outByteOffset, sampleCount, true);
                 break;
             case BIG_ENDIAN16:
-                TConversionTool.alaw2pcm16(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, true);
+                alaw2pcm16(inBuffer, 0, outBuffer, outByteOffset, sampleCount, true);
                 break;
             case LITTLE_ENDIAN16:
-                TConversionTool.alaw2pcm16(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount, false);
+                alaw2pcm16(inBuffer, 0, outBuffer, outByteOffset, sampleCount, false);
                 break;
             case ULAW8:
-                TConversionTool.alaw2ulaw(inBuffer, 0, outBuffer,
-                        outByteOffset, sampleCount);
+                alaw2ulaw(inBuffer, 0, outBuffer, outByteOffset, sampleCount);
                 break;
             }
             return inFrameCount;
         }
 
         @Override
-        protected void convertInPlace(byte[] buffer, int byteOffset,
-                                      int frameCount) {
+        protected void convertInPlace(byte[] buffer, int byteOffset, int frameCount) {
             int sampleCount = frameCount * format.getChannels();
             switch (convertType) {
             case UNSIGNED8:
-                TConversionTool.alaw2pcm8(buffer, byteOffset, sampleCount,
-                        false);
+                alaw2pcm8(buffer, byteOffset, sampleCount, false);
                 break;
             case SIGNED8:
-                TConversionTool.alaw2pcm8(buffer, byteOffset, sampleCount, true);
+                alaw2pcm8(buffer, byteOffset, sampleCount, true);
                 break;
             case ULAW8:
-                TConversionTool.alaw2ulaw(buffer, byteOffset, sampleCount);
+                alaw2ulaw(buffer, byteOffset, sampleCount);
                 break;
             default:
                 throw new RuntimeException("FromAlawStream: Call to convertInPlace, "
@@ -258,5 +242,4 @@ public class LawDecoder extends TEncodingFormatConversionProvider {
             }
         }
     }
-
 }
