@@ -14,10 +14,6 @@
  *   limitations under the License.
  */
 
-/*
-|<---            this code is formatted to fit into 80 columns             --.|
-*/
-
 package org.tritonus.lowlevel.vorbis;
 
 import java.lang.System.Logger;
@@ -55,33 +51,33 @@ public class DspState {
     }
 
     public DspState() {
-        logger.log(Level.TRACE, "DspState.<init>(): begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = malloc();
-        if (nReturn < 0) {
+        int ret = malloc();
+        if (ret < 0) {
             throw new RuntimeException("malloc of vorbis_dsp_state failed");
         }
 
-        logger.log(Level.TRACE, "DspState.<init>(): end");
+        logger.log(Level.TRACE, "end");
     }
 
     private int malloc() {
-        logger.log(Level.TRACE, "malloc(): begin");
+        logger.log(Level.TRACE, "begin");
 
         handle = new vorbis_dsp_state();
-        logger.log(Level.TRACE, String.format("malloc(): handle: %s", handle));
+        logger.log(Level.TRACE, "handle: %s".formatted(handle));
 
-        logger.log(Level.TRACE, "malloc(): end");
+        logger.log(Level.TRACE, "end");
 
         return 0;
     }
 
     public void free() {
-        logger.log(Level.TRACE, "free(): begin");
+        logger.log(Level.TRACE, "begin");
 
         handle = null;
 
-        logger.log(Level.TRACE, "free(): end");
+        logger.log(Level.TRACE, "end");
     }
 
     /**
@@ -89,92 +85,92 @@ public class DspState {
      * Calls vorbis_analysis_init().
      */
     public int initAnalysis(Info info) {
-        logger.log(Level.TRACE, "initAnalysis(): begin");
+        logger.log(Level.TRACE, "begin");
 
         vorbis_info infoHandle = info.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_analysis_init(handle, infoHandle);
+        int ret = CodecLibrary.INSTANCE.vorbis_analysis_init(handle, infoHandle);
 
-        logger.log(Level.TRACE, "initAnalysis(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_analysis_headerout().
      */
     public int headerOut(Comment comment, Packet packet, Packet commentPacket, Packet codePacket) {
-        logger.log(Level.TRACE, "headerOut(): begin");
+        logger.log(Level.TRACE, "begin");
 
         vorbis_comment commentHandle = comment.getHandle();
         ogg_packet packetHandle = packet.getHandle();
         ogg_packet commentPacketHandle = commentPacket.getHandle();
         ogg_packet codePacketHandle = codePacket.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_analysis_headerout(handle,
+        int ret = CodecLibrary.INSTANCE.vorbis_analysis_headerout(handle,
                 commentHandle,
                 packetHandle,
                 commentPacketHandle,
                 codePacketHandle);
 
-        logger.log(Level.TRACE, "headerOut(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_analysis_buffer() and
      * vorbis_analysis_wrote().
      */
-    public int write(float[][] afValues, int nValues) {
-        logger.log(Level.TRACE, "write(): begin");
+    public int write(float[][] values, int count) {
+        logger.log(Level.TRACE, "begin");
 
-        Pointer bufferPointer = CodecLibrary.INSTANCE.vorbis_analysis_buffer(handle, nValues).getValue();
-        logger.log(Level.TRACE, String.format("write(): bufferPointer: %s, %d", bufferPointer, nValues));
+        Pointer bufferPointer = CodecLibrary.INSTANCE.vorbis_analysis_buffer(handle, count).getValue();
+        logger.log(Level.TRACE, "bufferPointer: %s, %d".formatted(bufferPointer, count));
 
-        if (afValues != null) {
-            int nObjectArrayLength = afValues.length;
-            logger.log(Level.TRACE, String.format("write(): objectArray length: %d", nObjectArrayLength));
+        if (values != null) {
+            int objectArrayLength = values.length;
+            logger.log(Level.TRACE, "objectArray length: %d".formatted(objectArrayLength));
 
             long bufferPointerP = 0;
-            for (float[] floatArray : afValues) {
-                logger.log(Level.TRACE, String.format("write(): floatArray: %d", floatArray.length));
+            for (float[] floatArray : values) {
+                logger.log(Level.TRACE, "floatArray: %d".formatted(floatArray.length));
 
-                bufferPointer.write(bufferPointerP, floatArray, 0, nValues);
-                bufferPointerP += ((long) nValues * Float.BYTES);
+                bufferPointer.write(bufferPointerP, floatArray, 0, count);
+                bufferPointerP += ((long) count * Float.BYTES);
             }
         }
-        int nReturn = CodecLibrary.INSTANCE.vorbis_analysis_wrote(handle, nValues);
+        int ret = CodecLibrary.INSTANCE.vorbis_analysis_wrote(handle, count);
 
-        logger.log(Level.TRACE, "write(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_analysis_blockout().
      */
     public int blockOut(Block block) {
-        logger.log(Level.TRACE, "blockOut(): begin");
+        logger.log(Level.TRACE, "begin");
 
         vorbis_block blockHandle = block.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_analysis_blockout(handle, blockHandle);
+        int ret = CodecLibrary.INSTANCE.vorbis_analysis_blockout(handle, blockHandle);
 
-        logger.log(Level.TRACE, "blockOut(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_bitrate_flushpacket().
      */
     public int flushPacket(Packet packet) {
-        logger.log(Level.TRACE, "flushPacket(): begin");
+        logger.log(Level.TRACE, "begin");
 
         ogg_packet packetHandle = packet.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_bitrate_flushpacket(handle, packetHandle);
+        int ret = CodecLibrary.INSTANCE.vorbis_bitrate_flushpacket(handle, packetHandle);
 
-        logger.log(Level.TRACE, "flushPacket(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
@@ -182,89 +178,89 @@ public class DspState {
      * Calls vorbis_synthesis_init().
      */
     public int initSynthesis(Info info) {
-        logger.log(Level.TRACE, "initSynthesis(): begin");
+        logger.log(Level.TRACE, "begin");
 
         vorbis_info infoHandle = info.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_synthesis_init(handle, infoHandle);
+        int ret = CodecLibrary.INSTANCE.vorbis_synthesis_init(handle, infoHandle);
 
-        logger.log(Level.TRACE, "initSynthesis(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_synthesis_blockin().
      */
     public int blockIn(Block block) {
-        logger.log(Level.TRACE, "blockIn(): begin");
+        logger.log(Level.TRACE, "begin");
 
         vorbis_block blockHandle = block.getHandle();
-        int nReturn = CodecLibrary.INSTANCE.vorbis_synthesis_blockin(handle, blockHandle);
+        int ret = CodecLibrary.INSTANCE.vorbis_synthesis_blockin(handle, blockHandle);
 
-        logger.log(Level.TRACE, "blockIn(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_synthesis_pcmout().
      */
-    public int pcmOut(float[][] afPcm) {
-        PointerByReference pcm = new PointerByReference();
+    public int pcmOut(float[][] pcm) {
+        PointerByReference _pcm = new PointerByReference();
 
-        logger.log(Level.TRACE, "pcmOut(): begin");
+        logger.log(Level.TRACE, "begin");
 
-        int nSamples = CodecLibrary.INSTANCE.vorbis_synthesis_pcmout(handle, pcm);
-        logger.log(Level.TRACE, String.format("pcmOut(): samples: %d", nSamples));
+        int samples = CodecLibrary.INSTANCE.vorbis_synthesis_pcmout(handle, _pcm);
+        logger.log(Level.TRACE, "samples: %d".formatted(samples));
 
-        if (nSamples > 0) {
-            int nChannels = new vorbis_info(handle.vi).channels;
-            logger.log(Level.TRACE, String.format("pcmOut(): channels: %d", nChannels));
+        if (samples > 0) {
+            int channels = new vorbis_info(handle.vi).channels;
+            logger.log(Level.TRACE, "channels: %d".formatted(channels));
 
-            Pointer[] pp = pcm.getValue().getPointerArray(0, nChannels);
-            for (int nChannel = 0; nChannel < nChannels; nChannel++) {
-                afPcm[nChannel] = pp[nChannel].getFloatArray(0, nSamples);
-                logger.log(Level.TRACE, String.format("pcmOut(): float array: %d", afPcm[nChannel].length));
+            Pointer[] pp = _pcm.getValue().getPointerArray(0, channels);
+            for (int channel = 0; channel < channels; channel++) {
+                pcm[channel] = pp[channel].getFloatArray(0, samples);
+                logger.log(Level.TRACE, "float array: %d".formatted(pcm[channel].length));
             }
-            logger.log(Level.TRACE, "pcmOut(): end");
+            logger.log(Level.TRACE, "end");
         }
-        return nSamples;
+        return samples;
     }
 
     /**
      * Calls vorbis_synthesis_read().
      */
-    public int read(int nSamples) {
-        logger.log(Level.TRACE, "read(): begin");
+    public int read(int samples) {
+        logger.log(Level.TRACE, "begin");
 
-        int nReturn = CodecLibrary.INSTANCE.vorbis_synthesis_read(handle, nSamples);
+        int ret = CodecLibrary.INSTANCE.vorbis_synthesis_read(handle, samples);
 
-        logger.log(Level.TRACE, "read(): end");
+        logger.log(Level.TRACE, "end");
 
-        return nReturn;
+        return ret;
     }
 
     /**
      * Accesses sequence.
      */
     public long getSequence() {
-        logger.log(Level.TRACE, "getSequence(): begin");
+        logger.log(Level.TRACE, "begin");
 
-        long lReturn = handle.sequence;
+        long ret = handle.sequence;
 
-        logger.log(Level.TRACE, "getSequence(): end");
+        logger.log(Level.TRACE, "end");
 
-        return lReturn;
+        return ret;
     }
 
     /**
      * Calls vorbis_dsp_clear().
      */
     public void clear() {
-        logger.log(Level.TRACE, "clear(): begin");
+        logger.log(Level.TRACE, "begin");
 
         CodecLibrary.INSTANCE.vorbis_dsp_clear(handle);
 
-        logger.log(Level.TRACE, "clear(): end");
+        logger.log(Level.TRACE, "end");
     }
 }
