@@ -1,6 +1,5 @@
 package vavi.sound.sampled.jna.ogg;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.sun.jna.NativeLong;
@@ -29,7 +28,7 @@ public class ogg_page extends Structure {
 
     @Override
     protected List<String> getFieldOrder() {
-        return Arrays.asList("header", "header_len", "body", "body_len");
+        return List.of("header", "header_len", "body", "body_len");
     }
 
     /**
